--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   testing:
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -34,19 +35,30 @@ jobs:
         flake8 --count src
 
   push_to_registry:
+    needs: testing
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: iriskin/train-hard-backend
-          tag_with_ref: true
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./compose/django/Dockerfile
+          push: true
+          tags: iriskin/train-hard-backend:latest
+          build-args: |
+            arg1=value1
+            arg2=value2
 
       - name: Deploy on the server
         env:
