--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,63 +5,63 @@ on:
     branches: [ master ]
 
 jobs:
-  testing:
-    name: Run tests
-    runs-on: ubuntu-latest
+  # testing:
+  #   name: Run tests
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8.5'
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: '3.8.5'
 
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
+  #   - name: Cache pip
+  #     uses: actions/cache@v2
+  #     with:
+  #       path: ~/.cache/pip
+  #       key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+  #       restore-keys: |
+  #         ${{ runner.os }}-pip-
+  #         ${{ runner.os }}-
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+  #   - name: Install Dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       pip install -r requirements.txt
 
-    - name: Flake
-      run: |
-        flake8 --count src
+  #   - name: Flake
+  #     run: |
+  #       flake8 --count src
 
-  push_to_registry:
-    needs: testing
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+  # push_to_registry:
+  #   needs: testing
+  #   name: Push Docker image to Docker Hub
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./compose/django/Dockerfile
-          push: true
-          tags: iriskin/train-hard-backend:latest
-          build-args: |
-            arg1=value1
-            arg2=value2
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         context: .
+  #         file: ./compose/django/Dockerfile
+  #         push: true
+  #         tags: iriskin/train-hard-backend:latest
+  #         build-args: |
+  #           arg1=value1
+  #           arg2=value2
 
   deploy_to_server:
-    needs: push_to_registry
+    # needs: push_to_registry
     name: Deploy project
     runs-on: ubuntu-latest
 
@@ -80,6 +80,7 @@ jobs:
           chmod 700 ~/.ssh
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
+          ls -la
           scp ./docker-compose.yml $REMOTE_USER@$REMOTE_HOST:docker-compose.yml
           ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose pull'
           ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose stop'
