--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core
+daphne==3.0.1
 Django==3.1.5
 djangorestframework==3.12.2
 django-filter==2.4.0
@@ -6,6 +7,9 @@ drf-yasg==1.20.0
 psycopg2-binary==2.8.6
 django-environ==0.4.5
 gunicorn==20.0.4
+
+# Authentication
+djangorestframework-simplejwt==4.6.0
 
 # Linting
 dlint
