Updated Deploy, revomed temp model, added check started training EP

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,7 +83,7 @@ jobs:
           chmod 700 ~/.ssh
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
-          scp ./docker-compose.yml $REMOTE_USER@$REMOTE_HOST:docker-compose.yml
-          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose pull'
-          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose stop'
-          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose up -d'
+          scp ./docker-compose.yml $REMOTE_USER@$REMOTE_HOST:back/docker-compose.yml
+          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml pull'
+          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml stop'
+          ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml up -d'
