--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,9 @@ ignore =
     W504,  # line break after binary operator
     A003,  # class attribute "list" is shadowing a python builtin
     E131,  # continuation line unaligned for hanging indent
+
+[isort]
+src_paths=src
+wrap_length=79
+known_first_party=apps
+lines_between_types=1
