Updated flake rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ ignore =
     W504,  # line break after binary operator
     A003,  # class attribute "list" is shadowing a python builtin
     E131,  # continuation line unaligned for hanging indent
+    I201,  # Missing newline between import groups.
 
 [isort]
 src_paths=src
