--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,7 @@ jobs:
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
           scp ./docker-compose.yml $REMOTE_USER@$REMOTE_HOST:back/docker-compose.yml
+          scp ./compose/nginx $REMOTE_USER@$REMOTE_HOST:back/compose/nginx
           ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml pull'
           ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml stop'
           ssh $REMOTE_USER@$REMOTE_HOST 'docker-compose -f back/docker-compose.yml up -d'
